--- a/css/4-layout.css
+++ b/css/4-layout.css
@@ -46,9 +46,8 @@
   /* Full-width sections */
   .full-width-section {
     width: 100%;
-    max-width: 100vw;
-    margin-left: calc(-50vw + 50%);
-    margin-right: calc(-50vw + 50%);
+    margin-left: 0;
+    margin-right: 0;
     box-sizing: border-box;
   }
   
